# CameraDataSharing

./: .gitignore  README.md
cameradatasharing/: CMakeLists.txt  cameralist.conf
cameradatasharing/Interface/: sensorsharing.proto
cameradatasharing/include/: BaseTypes.hpp  CameraList.hpp  Globals.hpp  Server.h  ServerImpl.hpp  Utility.hpp
cameradatasharing/scripts/: cleanbuild  remake  runclient  runserver
cameradatasharing/src/: Client.cc  Main.cpp  Server.cc  ServerImpl.cc  Utility.cpp
protos/: sensorsharing.proto
webapp/: client.js  npmsetup  package-lock.json  package.json
webapp/views/: index.ejs
